# swc-plugin-vue-jsx

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config
playground/: index.html  package.json  plugin_vue_jsx.ts  pnpm-lock.yaml  swc_plugin_vue_jsx.ts  tsconfig.json  vite.config.ts  vitest.config.ts
playground/bench/: plugin.bench.ts
playground/src/: app.tsx  main.ts  test.tsx
playground/test/: jsx.test.ts
src/: constant.rs  context.rs  fragment.rs  hoist.rs  lib.rs  options.rs  patch_flag.rs  revise.rs  scope.rs  scope_helper.rs  split_static.rs  state.rs  static_vnode.rs  static_vnode_helper.rs  text.rs  vnode.rs
src/VNode/: attr.rs  attr_key.rs  attr_value.rs  directive.rs  element.rs  element_tag.rs  fragment.rs  mod.rs  prop.rs  props.rs  text.rs  vnode.rs
src/convert/: fragment.rs  mod.rs  patch_flag.rs  split_static.rs  text.rs  vnode.rs
src/element/: attr_value.rs  directive.rs  mod.rs  tag.rs
src/hoist/: decl_map.rs  mod.rs
src/hoist-helper/: helper.rs  mod.rs
src/import-helper/: core.rs  helper.rs  mod.rs
src/shared/: add.rs  analyze.rs  convert.rs  declare.rs  expr.rs  ident.rs  mod.rs  parse.rs  state.rs  transform.rs
src/utils/: ast.rs  ast_marco.rs  clean_jsx_text.rs  code_emitter.rs  is.rs  mod.rs  pattern.rs  regex_macro.rs
tests/: convert.rs  convert__div.snap  fixture.rs
tests/fixture/: test.output.tsx  test.tsx
tests/snapshots/: convert__Directive__custom.snap  convert__Directive__vHtml.snap  convert__Directive__vModel.snap  convert__Directive__vModel_with_key.snap  convert__Directive__vShow.snap  convert__Directive__vSlots.snap  convert__Directive__vText.snap  convert__Element__expr_child.snap  convert__Element__fragment_child.snap  convert__Element__jsx_child.snap  convert__Element__spread_child.snap  convert__Event__namespace.snap  convert__Event__onClick.snap  convert__Fragment__children.snap  convert__HelloWorld.snap  (+19 more)
(+9 files in other folders)
