[package]
name = "swc-plugin-vue-jsx"
version = "0.0.0"
description = "SWC plugin for Vue JSX"
authors = ["westhide <mr.westhide@gmail.com>"]
repository = "https://github.com/westhide/swc-plugin-vue-jsx.git"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"

[dependencies]
swc-helper-module-import = "0.1.0"
swc-helper-jsx-transform = "0.1.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.16.0"
regex = "1.7.0"
phf = { version = "0.11", features = ["macros"] }
indexmap = { version = "1.9" }
swc_core = { version = "0.52", features = [
    "ecma_plugin_transform",
    "common",
    "ecma_parser",
    "ecma_codegen",
    "ecma_transforms_typescript",
    "ecma_transforms_optimization",
    "ecma_quote",
    "ecma_utils",
    "ecma_minifier",
    "testing_transform",
] }
tracing = { version = "0.1.37", features = ["release_max_level_off"] }

[dev-dependencies]
testing = "0.31.28"
insta = "1.26.0"